Refracture is going nicely

--- a/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
+++ b/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,126 +11,339 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TeacherWithHooks():\n",
+    "#export\n",
+    "from exp.nb_06 import *\n",
+    "from torch import nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(1.6044e-08, device='cuda:0'),\n",
+       " <function Tensor.std>,\n",
+       " tensor(2.1759e-08, device='cuda:0'),\n",
+       " tensor(1., device='cuda:0'))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xTraining, yTraining, xValidation, yValidation = list(map(lambda x: x.cuda(),getMnistData()))\n",
+    "xTrainingNormalized, xValidationNormalized = normalizeVectors(xTraining, xValidation)\n",
+    "(xTrainingNormalized.mean(), xTrainingNormalized.std, xValidationNormalized.mean(), xValidationNormalized.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numberOfClasses = 10\n",
+    "hiddenLayerOutput = 50\n",
+    "batchSize = 64\n",
+    "lossFuction = Functional.cross_entropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingDataSet, validationDataSet = Dataset(xTrainingNormalized, yTraining), Dataset(xValidationNormalized, yValidation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingDataLoader, validationDataLoader = createDataLoaders(trainingDataSet, validationDataSet, batchSize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imageDataBunch = DataBunch(trainingDataLoader, validationDataLoader, numberOfClasses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layerSizes = [8, 16, 32, 64, 64]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phases = [0.3, 0.7]\n",
+    "weightsScheduler = aggregateSchedulers(phases, createCosineSchedulers(0.3, 0.6, 0.2)) \n",
+    "biasScheduler = aggregateSchedulers(phases, createCosineSchedulers(0.9, 1.8, 0.6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Subscriber:\n",
+    "    def __init__(self):\n",
+    "        self._totalEpochs = 0\n",
+    "        self._currentEpoch = 0\n",
+    "\n",
+    "    def postEpoch(self, epochNumber):\n",
+    "        pass\n",
+    "\n",
+    "    def postBatchEvaluation(self, loss):\n",
+    "        pass\n",
+    "\n",
+    "    def preBatchEvaluation(self):\n",
+    "        pass\n",
+    "\n",
+    "    def preEpoch(self, epoch):\n",
+    "        self._currentEpoch = epoch\n",
+    "        pass\n",
+    "\n",
+    "    def preModelTeach(self, model, epochs):\n",
+    "        self._totalEpochs = epochs\n",
+    "        pass\n",
+    "\n",
+    "    def postModelTeach(self):\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ValidationSubscriber(Subscriber):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def postEpoch(self, epochNumber):\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TrainingSubscriber(Subscriber):\n",
     "\n",
     "    def __init__(self,\n",
-    "                 lossFunction=Functional.cross_entropy,\n",
-    "                 accuracyFunction=accuracy,\n",
-    "                 schedulingFunctions=[cosineScheduler(1e-1, 1e-6), cosineScheduler(1e-1, 1e-6)]\n",
-    "                 ):\n",
-    "        self.lossFunction = lossFunction\n",
-    "        self.accuracyFunction = accuracyFunction\n",
-    "        self.schedulingFunctions = schedulingFunctions\n",
-    "        self._initStorage()\n",
+    "                 schedulingFunctions=[cosineScheduler(1e-1, 1e-6), cosineScheduler(1e-1, 1e-6)]):\n",
+    "        super().__init__()\n",
+    "        self._optimizer = None\n",
+    "        self._schedulingFunctions = schedulingFunctions\n",
     "\n",
-    "    def _initStorage(self):\n",
-    "        self.learningRates, self.losses = [], []\n",
-    "        self.registeredHooks = []\n",
+    "    def postEpoch(self, epochNumber):\n",
+    "        pass\n",
     "\n",
-    "    def teachModel(self, cnnModel, dataBunch, numberOfEpochs):\n",
-    "        self.optimizer = optim.SGD(cnnModel.parameters(), self.schedulingFunctions[0](0))\n",
-    "        self.numberOfEpochs = numberOfEpochs\n",
-    "        self.modelsMeans = [[] for _ in cnnModel.layers]\n",
-    "        self.convolutionModel = cnnModel\n",
-    "        self.modelsStandardDeviations = [[] for _ in cnnModel.layers]\n",
-    "        self._beginTraining()\n",
+    "    def preModelTeach(self, model, epochs):\n",
+    "        super().preModelTeach(model, epochs)\n",
+    "        self._optimizer = optim.SGD(model.parameters(), self._schedulingFunctions[0](0))\n",
+    "        self._totalEpochs = epochs\n",
+    "\n",
+    "    def postBatchEvaluation(self, loss):\n",
+    "        loss.backward()\n",
+    "        self._optimizer.step()\n",
+    "        self._optimizer.zero_grad()\n",
+    "\n",
+    "    def preBatchEvaluation(self):\n",
+    "        for parameterGroup, schedulingFunction in zip(self._optimizer.param_groups, self._schedulingFunctions):\n",
+    "            parameterGroup['lr'] = schedulingFunction(self._currentEpoch / self._totalEpochs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TeacherEnhanced:\n",
+    "    def __init__(self,\n",
+    "                 dataBunch,\n",
+    "                 lossFunction,\n",
+    "                 trainingSubscriber: TrainingSubscriber,\n",
+    "                 validationSubscriber: ValidationSubscriber):\n",
+    "        self._dataBunch = dataBunch\n",
+    "        self._lossFunction = lossFunction\n",
+    "        self._trainingSubscriber = trainingSubscriber\n",
+    "        self._validationSubscriber = validationSubscriber\n",
+    "\n",
+    "    def teachModel(self, model, numberOfEpochs):\n",
+    "        self._notifiyPreTeach(model, numberOfEpochs)\n",
     "        for epoch in range(numberOfEpochs):\n",
-    "            self.epoch = epoch\n",
-    "            trainingLoss, trainingAccuracy = self._trainModel(cnnModel, dataBunch.trainingDataLoader)\n",
-    "            print(\"Epoch #{} Training: Loss {} Accuracy {}\".format(epoch, trainingLoss, trainingAccuracy))\n",
+    "            self._trainModel(model,\n",
+    "                             epoch)\n",
+    "            self._validateModel(model,\n",
+    "                                epoch)\n",
+    "        self._notifiyPostTaught()\n",
     "\n",
-    "            validationLoss, validationAccuracy = self._validateModel(cnnModel, dataBunch.validationDataLoader)\n",
-    "            print(\"Epoch #{} Validation: Loss {} Accuracy {}\".format(epoch, validationLoss, validationAccuracy))\n",
-    "            print(\"\")\n",
+    "    def _notifiyPreTeach(self, model, epochs):\n",
+    "        self._trainingSubscriber.preModelTeach(model, epochs)\n",
+    "        self._validationSubscriber.preModelTeach(model, epochs)\n",
     "\n",
-    "    def plotLearningRates(self):\n",
-    "        plotter.plot(self.learningRates)\n",
+    "    def _notifiyPostTaught(self):\n",
+    "        self._trainingSubscriber.postModelTeach()\n",
+    "        self._validationSubscriber.postModelTeach()\n",
     "\n",
-    "    def plotLosses(self):\n",
-    "        plotter.plot(self.losses)\n",
+    "    def _trainModel(self, model, epoch):\n",
+    "        self._processData(model,\n",
+    "                          self._dataBunch.trainingDataSet,\n",
+    "                          epoch,\n",
+    "                          self._trainingSubscriber)\n",
     "\n",
-    "    def plotMeans(self):\n",
-    "        for layerOutputMeans in self.modelsMeans: plotter.plot(layerOutputMeans[:200])\n",
-    "        plotter.legend(range(len(self.modelsMeans)))\n",
-    "\n",
-    "    def plotStandardDeviations(self):\n",
-    "        for layerOutputSD in self.modelsStandardDeviations: plotter.plot(layerOutputSD[:200])\n",
-    "        plotter.legend(range(len(self.modelsStandardDeviations)))\n",
-    "\n",
-    "    def _beginTraining(self):\n",
-    "        self._initStorage()\n",
-    "\n",
-    "    def _addStats(self, index, model, inputParameters, outputParameters):\n",
-    "        self.modelsMeans[index].append(outputParameters.data.mean())\n",
-    "        self.modelsStandardDeviations[index].append(outputParameters.data.std())\n",
-    "\n",
-    "    def _registerHooks(self):\n",
-    "        for index, modelLayer in enumerate(self.convolutionModel.layers):\n",
-    "            self.registeredHooks.append(modelLayer.register_forward_hook(partial(self._addStats, index)))\n",
-    "\n",
-    "    def _unregisterHooks(self):\n",
-    "        for registeredHooks in self.registeredHooks: registeredHooks.remove()\n",
-    "        self.registeredHooks = []\n",
-    "\n",
-    "    def _anealLearningRate(self):\n",
-    "        for parameterGroup, schedulingFunction in zip(self.optimizer.param_groups, self.schedulingFunctions):\n",
-    "            scheduledLearningRate = schedulingFunction(self.epoch / self.numberOfEpochs)\n",
-    "            parameterGroup['lr'] = scheduledLearningRate\n",
-    "\n",
-    "    def _trainModel(self, cnnModel, trainingDataSet):\n",
-    "        def _teachModel(loss):\n",
-    "            loss.backward()\n",
-    "            self.optimizer.step()\n",
-    "            self.optimizer.zero_grad()\n",
-    "\n",
-    "            # capture metrics\n",
-    "            self.learningRates.append(self.optimizer.param_groups[-1]['lr'])\n",
-    "            self.losses.append(loss.detach().cpu())\n",
-    "\n",
-    "        returnItems = self._proccessDataSet(cnnModel,\n",
-    "                                            trainingDataSet,\n",
-    "                                            preEpoch=self._registerHooks,\n",
-    "                                            preEvaluation=self._anealLearningRate,\n",
-    "                                            postEpoch=self._unregisterHooks,\n",
-    "                                            postEvaluation=_teachModel\n",
-    "                                            )\n",
-    "        return returnItems\n",
-    "\n",
-    "    def _validateModel(self, cnnModel, validationDataSet):\n",
+    "    def _validateModel(self, model, epoch):\n",
     "        with torch.no_grad():\n",
-    "            returnItems = self._proccessDataSet(cnnModel, validationDataSet)\n",
-    "        return returnItems\n",
+    "            self._processData(model,\n",
+    "                              self._dataBunch.validationDataSet,\n",
+    "                              epoch,\n",
+    "                              self._validationSubscriber)\n",
     "\n",
-    "    def _proccessDataSet(self,\n",
-    "                         cnnModel,\n",
-    "                         dataLoader,\n",
-    "                         preEpoch=lambda: None,\n",
-    "                         preEvaluation=lambda: None,\n",
-    "                         postEvaluation=lambda loss: None,\n",
-    "                         postEpoch=lambda: None\n",
-    "                         ):\n",
-    "        accumulatedLoss, accumulatedAccuracy = 0., 0.\n",
-    "        preEpoch()\n",
-    "        for _xDataSet, _yDataSet in dataLoader:\n",
-    "            preEvaluation()\n",
-    "            _predictions = cnnModel(_xDataSet)\n",
-    "            loss = self.lossFunction(_predictions, _yDataSet)\n",
-    "            postEvaluation(loss)\n",
-    "            accumulatedLoss += loss\n",
-    "            accumulatedAccuracy += self.accuracyFunction(_predictions, _yDataSet)\n",
-    "        postEpoch()\n",
-    "        numberOfBatches = len(dataLoader)\n",
-    "        return accumulatedLoss / numberOfBatches, accumulatedAccuracy / numberOfBatches"
+    "    def _processData(self,\n",
+    "                     model,\n",
+    "                     dataLoader,\n",
+    "                     epoch,\n",
+    "                     dataProcessingSubscriber: Subscriber):\n",
+    "        dataProcessingSubscriber.preEpoch(epoch)\n",
+    "        for _xDataBatch, _yDataBatch in dataLoader:\n",
+    "            dataProcessingSubscriber.preBatchEvaluation()\n",
+    "            _predictions = model(_xDataBatch)\n",
+    "            calculatedLoss = self._lossFunction(_predictions, _yDataBatch)\n",
+    "            dataProcessingSubscriber.postBatchEvaluation(calculatedLoss)\n",
+    "        dataProcessingSubscriber.postEpoch(epoch)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validationSubscriber = ValidationSubscriber()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingSubscriber = TrainingSubscriber()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teacher = TeacherEnhanced(imageDataBunch, \n",
+    "                          lossFuction, \n",
+    "                          trainingSubscriber,\n",
+    "                          validationSubscriber\n",
+    "                         )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convolutionalModelSR1 = createBetterConvolutionModel(numberOfClasses, layerSizes).cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.0983, device='cuda:0')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(convolutionalModelSR1(xValidationNormalized), yValidation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teacher.teachModel(convolutionalModelSR1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.9749, device='cuda:0')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(convolutionalModelSR1(xValidationNormalized), yValidation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Todo: Statistics Subscriber, Hooks"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch_fastai",
    "language": "python",
    "name": "python3"
   },
