--- a/nbs/dl2/06_cuda_cnn_hooks_init.ipynb
+++ b/nbs/dl2/06_cuda_cnn_hooks_init.ipynb
@@ -1869,7 +1869,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch_fastai",
    "language": "python",
    "name": "python3"
   },
