--- a/nbs/dl2/07_NORMIES.ipynb
+++ b/nbs/dl2/07_NORMIES.ipynb
@@ -1072,7 +1072,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch_fastai",
    "language": "python",
    "name": "python3"
   },
