Still more refactoring

--- a/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
+++ b/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,32 +22,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(1.6044e-08, device='cuda:0'),\n",
+       "(tensor(-7.6999e-06),\n",
        " <function Tensor.std>,\n",
-       " tensor(2.1759e-08, device='cuda:0'),\n",
-       " tensor(1., device='cuda:0'))"
+       " tensor(-7.0751e-08),\n",
+       " tensor(1.0000))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xTraining, yTraining, xValidation, yValidation = list(map(lambda x: x.cuda(),getMnistData()))\n",
+    "# xTraining, yTraining, xValidation, yValidation = list(map(lambda x: x.cuda(),getMnistData()))\n",
+    "xTraining, yTraining, xValidation, yValidation = list(map(lambda x: x,getMnistData()))\n",
     "xTrainingNormalized, xValidationNormalized = normalizeVectors(xTraining, xValidation)\n",
     "(xTrainingNormalized.mean(), xTrainingNormalized.std, xValidationNormalized.mean(), xValidationNormalized.std())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,20 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainingDataSet, validationDataSet = Dataset(xTrainingNormalized, yTraining), Dataset(xValidationNormalized, yValidation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainingDataLoader, validationDataLoader = createDataLoaders(trainingDataSet, validationDataSet, batchSize)"
+    "# trainingDataSet, validationDataSet = Dataset(xTrainingNormalized, yTraining), Dataset(xValidationNormalized, yValidation)"
    ]
   },
   {
@@ -81,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imageDataBunch = DataBunch(trainingDataLoader, validationDataLoader, numberOfClasses)"
+    "trainingDataSet, validationDataSet = Dataset(xTrainingNormalized[:batchSize*3], yTraining[:batchSize*3]), Dataset(xValidationNormalized[:batchSize*3], yValidation[:batchSize*3])"
    ]
   },
   {
@@ -90,12 +82,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layerSizes = [8, 16, 32, 64, 64]"
+    "trainingDataLoader, validationDataLoader = createDataLoaders(trainingDataSet, validationDataSet, batchSize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imageDataBunch = DataBunch(trainingDataLoader, validationDataLoader, numberOfClasses)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layerSizes = [8, 16, 32, 64, 64]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,13 +128,13 @@
     "    def postEpoch(self, epochNumber):\n",
     "        pass\n",
     "\n",
-    "    def postBatchEvaluation(self, loss):\n",
+    "    def postBatchEvaluation(self, predictions, validationData):\n",
     "        pass\n",
     "\n",
     "    def preBatchEvaluation(self):\n",
     "        pass\n",
     "\n",
-    "    def preEpoch(self, epoch):\n",
+    "    def preEpoch(self, epoch, dataLoader):\n",
     "        self._currentEpoch = epoch\n",
     "        pass\n",
     "\n",
@@ -138,49 +148,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ValidationSubscriber(Subscriber):\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        pass\n",
-    "\n",
-    "    def postEpoch(self, epochNumber):\n",
-    "        pass\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TrainingSubscriber(Subscriber):\n",
+    "class StatisticsSubscriber(Subscriber):\n",
     "\n",
     "    def __init__(self,\n",
-    "                 schedulingFunctions=[cosineScheduler(1e-1, 1e-6), cosineScheduler(1e-1, 1e-6)]):\n",
+    "                 accuracyFunction=accuracy,\n",
+    "                 name=\"Steve\"):\n",
     "        super().__init__()\n",
-    "        self._optimizer = None\n",
-    "        self._schedulingFunctions = schedulingFunctions\n",
+    "        self._epochAccuracy = 0.\n",
+    "        self._epochLoss = 0.\n",
+    "        self._numberOfBatches = 0\n",
+    "        self._accuracyFunction = accuracyFunction\n",
+    "        self._name = name\n",
+    "\n",
+    "    def preEpoch(self, epoch, dataLoader):\n",
+    "        super().preEpoch(epoch, dataLoader)\n",
+    "        self._numberOfBatches = len(dataLoader)\n",
+    "\n",
+    "    def postBatchEvaluation(self, predictions, validationData):\n",
+    "        super().postBatchEvaluation(predictions, validationData)\n",
+    "        self._epochAccuracy += self._accuracyFunction(predictions, validationData)\n",
+    "\n",
+    "    def postBatchLossConsumption(self, loss):\n",
+    "        self._epochLoss += loss\n",
     "\n",
     "    def postEpoch(self, epochNumber):\n",
-    "        pass\n",
-    "\n",
-    "    def preModelTeach(self, model, epochs):\n",
-    "        super().preModelTeach(model, epochs)\n",
-    "        self._optimizer = optim.SGD(model.parameters(), self._schedulingFunctions[0](0))\n",
-    "        self._totalEpochs = epochs\n",
-    "\n",
-    "    def postBatchEvaluation(self, loss):\n",
-    "        loss.backward()\n",
-    "        self._optimizer.step()\n",
-    "        self._optimizer.zero_grad()\n",
-    "\n",
-    "    def preBatchEvaluation(self):\n",
-    "        for parameterGroup, schedulingFunction in zip(self._optimizer.param_groups, self._schedulingFunctions):\n",
-    "            parameterGroup['lr'] = schedulingFunction(self._currentEpoch / self._totalEpochs)\n"
+    "        super().postEpoch(epochNumber)\n",
+    "        print(\"Epoch #{} {}: Loss {} Accuracy {}\".format(epochNumber,\n",
+    "                                                         self._name,\n",
+    "                                                         self._epochLoss / self._numberOfBatches,\n",
+    "                                                         self._epochAccuracy / self._numberOfBatches))\n"
    ]
   },
   {
@@ -189,14 +189,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class ValidationSubscriber(StatisticsSubscriber):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__(name=\"Validation\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TrainingSubscriber(StatisticsSubscriber):\n",
+    "\n",
+    "    def __init__(self,\n",
+    "                 lossFunction=Functional.cross_entropy,\n",
+    "                 schedulingFunctions=[cosineScheduler(1e-1, 1e-6), cosineScheduler(1e-1, 1e-6)], ):\n",
+    "        super().__init__(name=\"Training\")\n",
+    "        self._optimizer = None\n",
+    "        self._schedulingFunctions = schedulingFunctions\n",
+    "        self._lossFunction = lossFunction\n",
+    "\n",
+    "    def preModelTeach(self, model, epochs):\n",
+    "        super().preModelTeach(model, epochs)\n",
+    "        self._optimizer = optim.SGD(model.parameters(), self._schedulingFunctions[0](0))\n",
+    "        self._totalEpochs = epochs\n",
+    "\n",
+    "    def postBatchEvaluation(self, predictions, valdationData):\n",
+    "        super().postBatchEvaluation(predictions, valdationData)\n",
+    "        calculatedLoss = self._lossFunction(predictions, valdationData)\n",
+    "        self._teachModel(calculatedLoss)\n",
+    "        self.postBatchLossConsumption(calculatedLoss)\n",
+    "\n",
+    "    def _teachModel(self, loss):\n",
+    "        loss.backward()\n",
+    "        self._optimizer.step()\n",
+    "        self._optimizer.zero_grad()\n",
+    "\n",
+    "    def preBatchEvaluation(self):\n",
+    "        super().preBatchEvaluation()\n",
+    "        self._annealLearningRate()\n",
+    "\n",
+    "    def _annealLearningRate(self):\n",
+    "        for parameterGroup, schedulingFunction in zip(self._optimizer.param_groups, self._schedulingFunctions):\n",
+    "            parameterGroup['lr'] = schedulingFunction(self._currentEpoch / self._totalEpochs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class TeacherEnhanced:\n",
     "    def __init__(self,\n",
     "                 dataBunch,\n",
-    "                 lossFunction,\n",
     "                 trainingSubscriber: TrainingSubscriber,\n",
     "                 validationSubscriber: ValidationSubscriber):\n",
     "        self._dataBunch = dataBunch\n",
-    "        self._lossFunction = lossFunction\n",
     "        self._trainingSubscriber = trainingSubscriber\n",
     "        self._validationSubscriber = validationSubscriber\n",
     "\n",
@@ -235,18 +286,17 @@
     "                     dataLoader,\n",
     "                     epoch,\n",
     "                     dataProcessingSubscriber: Subscriber):\n",
-    "        dataProcessingSubscriber.preEpoch(epoch)\n",
+    "        dataProcessingSubscriber.preEpoch(epoch, dataLoader)\n",
     "        for _xDataBatch, _yDataBatch in dataLoader:\n",
     "            dataProcessingSubscriber.preBatchEvaluation()\n",
     "            _predictions = model(_xDataBatch)\n",
-    "            calculatedLoss = self._lossFunction(_predictions, _yDataBatch)\n",
-    "            dataProcessingSubscriber.postBatchEvaluation(calculatedLoss)\n",
+    "            dataProcessingSubscriber.postBatchEvaluation(_predictions, _yDataBatch)\n",
     "        dataProcessingSubscriber.postEpoch(epoch)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,12 +314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "teacher = TeacherEnhanced(imageDataBunch, \n",
-    "                          lossFuction, \n",
     "                          trainingSubscriber,\n",
     "                          validationSubscriber\n",
     "                         )"
@@ -277,25 +326,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "convolutionalModelSR1 = createBetterConvolutionModel(numberOfClasses, layerSizes).cuda()"
+    "# convolutionalModelSR1 = createBetterConvolutionModel(numberOfClasses, layerSizes).cuda()\n",
+    "convolutionalModelSR1 = createBetterConvolutionModel(numberOfClasses, layerSizes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.0983, device='cuda:0')"
+       "tensor(0.0983)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,25 +356,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #0 Training: Loss 2.326660633087158 Accuracy 0.1041666641831398\n",
+      "Epoch #0 Validation: Loss 0.0 Accuracy 0.125\n",
+      "Epoch #1 Training: Loss 4.635397434234619 Accuracy 0.2083333283662796\n",
+      "Epoch #1 Validation: Loss 0.0 Accuracy 0.25\n"
+     ]
+    }
+   ],
    "source": [
     "teacher.teachModel(convolutionalModelSR1, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.9749, device='cuda:0')"
+       "tensor(0.0983)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_fastai",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
