Worked the kinks out of the teacher refactor

--- a/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
+++ b/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
@@ -69,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainingDataSet, validationDataSet = Dataset(xTrainingNormalized[:batchSize*3], yTraining[:batchSize*3]), Dataset(xValidationNormalized[:batchSize*3], yValidation[:batchSize*3])"
+    "trainingDataSet, validationDataSet = Dataset(xTrainingNormalized[:batchSize*30], yTraining[:batchSize*30]), Dataset(xValidationNormalized[:batchSize*30], yValidation[:batchSize*30])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,16 +336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.0983)"
+       "tensor(0.1009)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,17 +356,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch #0 Training: Loss 2.326660633087158 Accuracy 0.1041666641831398\n",
-      "Epoch #0 Validation: Loss 0.0 Accuracy 0.125\n",
-      "Epoch #1 Training: Loss 4.635397434234619 Accuracy 0.2083333283662796\n",
-      "Epoch #1 Validation: Loss 0.0 Accuracy 0.25\n"
+      "Epoch #0 Training: Loss 6.911861896514893 Accuracy 0.31979167461395264\n",
+      "Epoch #0 Validation: Loss 0.0 Accuracy 0.3125\n",
+      "Epoch #1 Training: Loss 9.21076488494873 Accuracy 0.42656248807907104\n",
+      "Epoch #1 Validation: Loss 0.0 Accuracy 0.4166666567325592\n"
      ]
     }
    ],
@@ -376,22 +376,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.0983)"
+       "tensor(0.1042)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy(convolutionalModelSR1(xValidationNormalized), yValidation)"
+    "accuracy(convolutionalModelSR1(xValidationNormalized[:batchSize*30]), yValidation[:batchSize * 30])"
    ]
   },
   {
