--- a/nbs/dl2/06_cuda_cnn_hooks_init.ipynb
+++ b/nbs/dl2/06_cuda_cnn_hooks_init.ipynb
@@ -1051,7 +1051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use it to write a `†s` class that contains several hooks. We will also use it in the next notebook as a container for our objects in the data block API."
+    "We can use it to write a `Hooks` class that contains several hooks. We will also use it in the next notebook as a container for our objects in the data block API."
    ]
   },
   {
