--- a/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
+++ b/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
@@ -110,6 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class Subscriber:\n",
     "    def __init__(self):\n",
     "        self._totalEpochs = 0\n",
@@ -142,6 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class StatisticsSubscriber(Subscriber):\n",
     "\n",
     "    def __init__(self,\n",
@@ -180,6 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class ValidationSubscriber(StatisticsSubscriber):\n",
     "\n",
     "    def __init__(self):\n",
@@ -192,6 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class ModelLayerHook:\n",
     "    def __init__(self, model, callback=lambda *args: None) -> None:\n",
     "        super().__init__()\n",
@@ -208,6 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class StatsHook:\n",
     "    def __init__(self, model) -> None:\n",
     "        super().__init__()\n",
@@ -233,6 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class HookedSubscriber(Subscriber):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -261,6 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class TrainingSubscriber(StatisticsSubscriber, HookedSubscriber):\n",
     "\n",
     "    def __init__(self,\n",
@@ -302,6 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class TeacherEnhanced:\n",
     "    def __init__(self,\n",
     "                 dataBunch,\n",
@@ -562,6 +570,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
