--- a/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
+++ b/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
@@ -550,6 +550,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "exportNotebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -574,10 +583,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
