Start of the optimization stuffs

--- a/nbs/dl2/08_data_block.ipynb
+++ b/nbs/dl2/08_data_block.ipynb
@@ -13,6 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from functools import partial\n",
+    "from torch import tensor, nn\n",
+    "from nbs.dl2.exp.nb_05 import listify\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -1987,6 +1990,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
