--- a/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
+++ b/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
+    "from nbs.dl2.exp.nb_02 import getMnistData\n",
+    "from nbs.dl2.exp.nb_05 import cosineScheduler\n",
+    "from nbs.dl2.exp.nb_06 import normalizeVectors\n",
+    "import torch.nn.functional as Functional\n",
     "%matplotlib inline"
    ]
   },
@@ -17,7 +22,7 @@
    "source": [
     "#export\n",
     "from exp.nb_06 import *\n",
-    "from torch import nn"
+    "from torch import nn, optim"
    ]
   },
   {
@@ -583,10 +588,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
