--- a/nbs/dl2/09_optimizers.ipynb
+++ b/nbs/dl2/09_optimizers.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from nbs.dl2.exp.nb_08 import compose, get_learn_run\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -1333,6 +1334,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
