--- a/nbs/dl2/09b_learner.ipynb
+++ b/nbs/dl2/09b_learner.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from nbs.dl2.exp.nb_09 import ParamScheduler\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -54,13 +55,6 @@
    "metadata": {},
    "source": [
     "## Imagenette data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Jump_to lesson 11 video](https://course.fast.ai/videos/?lesson=11&t=6571)"
    ]
   },
   {
@@ -112,13 +106,6 @@
    "metadata": {},
    "source": [
     "Having a Runner is great but not essential when the `Learner` already has everything needed in its state. We implement everything inside it directly instead of building a second object."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### In Lesson 12 Jeremy Howard revisited material in the cell below  [Jump_to lesson 12 video](https://course.fast.ai/videos/?lesson=12&t=65)"
    ]
   },
   {
@@ -190,7 +177,6 @@
     "        try:\n",
     "            self.do_begin_fit(epochs)\n",
     "            for epoch in range(epochs):\n",
-    "                self.do_begin_epoch(epoch)\n",
     "                if not self('begin_epoch'): self.all_batches()\n",
     "\n",
     "                with torch.no_grad(): \n",
@@ -205,7 +191,7 @@
     "\n",
     "    ALL_CBS = {'begin_batch', 'after_pred', 'after_loss', 'after_backward', 'after_step',\n",
     "        'after_cancel_batch', 'after_batch', 'after_cancel_epoch', 'begin_fit',\n",
-    "        'begin_epoch', 'begin_validate', 'after_epoch',\n",
+    "        'begin_epoch', 'begin_epoch', 'begin_validate', 'after_epoch',\n",
     "        'after_cancel_train', 'after_fit'}\n",
     "    \n",
     "    def __call__(self, cb_name):\n",
@@ -427,6 +413,27 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
